--- a/style.css
+++ b/style.css
@@ -45,95 +45,120 @@ h3 {
 
 .child-img {
   position: relative;
+    align-self: center;
+    min-width: 195px;
+    padding: 0 1rem  0 0;
 
+}
+
+.teepees-img {
+  padding: 0 0 0 2rem;
+}
+.archery-img {
+  padding: 0 0 0 2rem;
 }
 
 .bg-img {
   background-color: #ededed;;
   background-image: url("img/random-pattern.svg");
-  height: 345px;
-  width: 345px;
-  position: absolute;
-  bottom: -0.8rem;
-  left: 0.3rem;
+  /* height: 345px;
+  width: 345px; */
+  height: 82%;
+  width: 78%;
   transform: scale(1.2);
+}
+
+.cabin-bg {
   z-index: -1;
+  position: absolute;
+  /* bottom: -0.68rem;
+  left: 0.25rem; */
+  left: 0%;
+  bottom: -1.8%;
+}
+
+.teepees-bg {
+  z-index: -1;
+  height: 70%;
+  width: 70%;
+  position: absolute;
+  top: 15%;
+  right: -12%;
+  transform: rotate(270deg);
+}
+
+.fishing-bg {
+  height: 82%;
+  width: 76%;
+  z-index: -1;
+  position: absolute;
+  left: 0%;
+  top: -2%;
+}
+
+.archery-bg {
+  height: 82%;
+  width: 73%;
+  z-index: -1;
+  position: absolute;
+  right: -1%;
+  bottom: -1.8%;
+}
+
+.canoeing-bg {
+  z-index: -1;
+  height: 70%;
+  width: 70%;
+  position: absolute;
+  top: 15%;
+  left: -12%;
+  transform: rotate(270deg);
 }
 
 .child-img img {
-  width: 90%;
-  box-shadow:10px 0px 10px #E5E4E0;
+  width: 95%;
+  box-shadow:10px 0px 20px #E5E4E0;
+  /* box-shadow: 10px 0px 10px 0px #E5E4E0; */
+}
+
+.teepees-img img{
+  box-shadow:0px 10px 20px #E5E4E0;
 }
 
 .child-text {
   /* border: 5px solid rgb(55, 0, 255); */
   text-align: left;
   line-height: 1.5;
-  padding: 4rem 0rem 0 2rem;
+  align-items: center;
 }
 
-.teepees-text {
+.child-text-right {
+  padding: 4.2rem 0rem 0 2rem;
 
 }
 
-.teepees-img {
-  
+.child-text-left {
+ margin: 4rem 1rem -1rem 2rem;
+
 }
 
 
-
-
-
-
-
-
-
-
-
-
-  /* .flex {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 5rem 0 5rem;
-
-  } */
-
-
-/* .child-img {
-  width: 100%;
-  border: 20px dotted red;
-  position: relative;
-background-image: url("img/random-pattern.svg");
-background-position: -5rem -5rem;
-background-color: #cccccc;
-height: 400px; 
-background-position: bottom 50px right 100px;
-background-repeat: no-repeat;
-background-size: ;
-} */
-
-
-.child-img img{
-  /* border: 5px solid rgb(0, 255, 0); */
-  /* width:90%; */
-/* position: absolute;
-top: 0;
-left: 50px; */
+.accomodation {
+  margin: -1.7rem 0 0 4rem;
+  /* height: 50vh; */
 }
 
-.pattern-img {
-/* top: 0px;
-right: 0px; */
-/* transform: scale(1.2); */
-/* z-index: 2; */
-/* height: 350px; */
-/* object-fit: cover; */
-
-
-
-/* height: 20rem; 
-object-fit: none; 
-object-position: -20% 10%; */
+.price {
+  font-size: 2.5rem;
+  font-weight: 400;
+  line-height: 1.2;
+  margin-bottom: 1rem;
 }
 
+.people {
+margin-bottom: 5rem;
+}
+
+.contact-container {
+  height: 50vh;
+}
