--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h3 {
 
 
 .container {
-  max-width: 60vw;
+  max-width: 900px;
   margin: 0 auto;
 }
 
@@ -161,7 +161,8 @@ margin-bottom: 5rem;
 
 .contact-container {
   background-color: #9BCCBB;
-  padding: 5rem 19rem 5rem;
+  /* width: 100%; */
+  padding: 5rem 0rem 5rem;
   /* height: 50vh; */
 }
 
@@ -222,12 +223,57 @@ textarea {
   cursor: pointer;
   padding: 1rem;
   border: solid 0.1rem #5a5661;
-  padding: 1.2rem 2rem 1.2rem;
+  padding: 1rem 1.5rem 1rem;
   margin-top: 0.8rem;
   background-color: transparent;
-  
+  transition: all 0.3s ease;
 }
 
+.btn:hover {
+  background-color: #5a5661;
+  border-color: #5a5661;
+  color: #fff;
+}
+
+footer {
+  padding: 3rem 0;
+  font-size: 1.5rem;
+}
+
+footer p {
+  margin-bottom: 1rem;
+}
+
+footer p span {
+  border-bottom: 2px solid #000;
+  display: inline-block;
+  line-height: 0.72;
+  text-shadow:
+    0px 0px #F5F4F0,
+    1px -1px #F5F4F0,
+    -1px 1px #F5F4F0,
+    -2px -2px #F5F4F0;
+    cursor: pointer;
+}
+
+footer p span:hover {
+  color: #79BBA4;
+  border-bottom: 2px solid #79BBA4;
+}
+
+.social-media {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  margin: 1.5rem 0 2rem;
+}
+
+.social-media img{
+  height: 2.3%;
+  width: 2.3%;
+  cursor: pointer;
+}
 
 
 
