--- a/style.css
+++ b/style.css
@@ -300,6 +300,7 @@ footer p span:hover {
     margin-bottom: 0;
     padding: 2rem 0;
   }
+
   header p {
     margin-bottom: 0.3rem;
   }
@@ -361,7 +362,6 @@ footer p span:hover {
     font-size: 1.35rem;
     margin-bottom: 0.5rem;
   }
-  
 
   .form .contact-details {
     display: flex;
@@ -402,5 +402,11 @@ footer p span:hover {
   .social-media img {
     height: 2.2rem;
     width: 2.2rem;
+  }
+}
+
+@media (max-width: 460px) {
+  .logo-img img {
+   width: 80%;
   }
 }
